opam-version: "2.0"
maintainer: "Issuu Raccoons <racoon@issuu.com>"
author: "Issuu Raccoon"
homepage: "https://github.com/issuu/uap-ocaml"
doc: "https://issuu.github.io/uap-ocaml/"
dev-repo: "git+https://github.com/issuu/uap-ocaml.git"
bug-reports: "https://github.com/issuu/uap-ocaml/issues"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "base" { >= "0.11.0" & < "0.12.0"}
  "stdio" { >= "0.11.0" & < "0.12.0"}
  "re" {>= "1.8.0" & < "2.0.0"}
  "yaml" {>= "0.2.1" & < "0.3.0"}
  "dune" {build}
  "ppx_deriving" {build}
  "ppx_let" {build}
  "alcotest" {with-test & >= "0.8.3" & < "0.9.0"}
]
