(library
  (name user_agent_parser)
  (modules (:standard \ test))
  (libraries yaml base re stdio)
  (preprocess (pps ppx_let ppx_deriving.eq ppx_deriving.show ppx_blob))
  (preprocessor_deps (file ../uap-core/regexes.yaml))
  (public_name user-agent-parser))

(executable
  (name test)
  (modules test)
  (preprocess (pps ppx_let ppx_deriving.eq ppx_deriving.show))
  (libraries alcotest user-agent-parser)
  (public_name test))

(alias
  (name runtest)
  (deps (:test test.exe))
  (action (run %{test} --color=always)))
