(rule
 (targets regexes.ml)
 (deps    %{project_root}/uap-core/regexes.yaml)
 (action  (with-stdout-to %{targets} (progn
    (echo "let yaml = Yaml.of_string_exn {yaml_parser_definitions|")
    (cat %{deps})
    (echo "|yaml_parser_definitions}")))))

(library
  (name user_agent_parser)
  (libraries base yaml re stdio)
  (preprocess (pps ppx_let ppx_deriving.eq ppx_deriving.show))
  (public_name user-agent-parser))
