(executable
  (name test)
  (preprocess (pps ppx_let ppx_deriving.eq ppx_deriving.show))
  (preprocessor_deps (file ../uap-core/tests/test_ua.yaml) (file ../uap-core/tests/test_os.yaml) (file ../uap-core/tests/test_device.yaml))
  (libraries alcotest user-agent-parser))

(alias
  (name runtest)
  (deps (:test test.exe))
  (action (setenv TEST_DIR %{project_root}/uap-core/tests (run %{test} --color=always))))
